0.16.0
- Optimise dependencies
- StarshipScrap page and item detail tiles
- Added Cronus rating tile

------------------------------------------------

0.15.3
- Handle TimeLoop research in Community mission page

0.15.0

- DevDetails button fixes
- Fix issue with Toast messages becoming duplicated
- Added missing images for Titles
- Fixes for Flora item images
- Added items from Leviathan Update 

------------------------------------------------

0.14.1

- Quick fix for proceduralStatBonuses

0.14.0

- Add the "View All Raw Materials Required" button to item details pages
- Filter the What Is New items by Web only
- Improve display of controller buttons in item descriptions again...
- Fix technology stats not showing in all languages
- Optimised images, higher resolution and smaller file size