@@ -277,6 +277,7 @@ body {
 .react-modal-sheet-content {
     padding-bottom: 3em;
     user-select: auto !important;
+    overflow: visible !important;
 
     a {
         color: $brand-secondary;
