@@ -2,6 +2,9 @@
 - Optimise dependencies
 - StarshipScrap page and item detail tiles
 - Added Cronus rating tile
+- Fixed spacing in Expedition reward texts
+- Improve UI elements on the Milestones reward popup
+- Better Description text images
 
 ------------------------------------------------
 
